# Document-Analyst-Crew

./: .dockerignore  .env.example  .gitignore  Dockerfile  OPTIMIZATION_PROGRESS.md  README.md  compose.yaml  docker-entrypoint.sh  docker.env.example  manual_run.py  pyproject.toml  requirements.txt  streamlit_app.py
src/greenloop_rag_crew/: agents.py  config_loader.py  crew.py  fast_pipeline.py  llm.py  main.py  ollama_client.py  openrouter_client.py  question_execution.py  runner.py  runtime_paths.py  streamlit_secrets.py  tasks.py  timing.py
src/greenloop_rag_crew/config/: __init__.py  agents.jsonc  questions.jsonc  tasks.jsonc
src/greenloop_rag_crew/diagnostics/: __init__.py  agents_check.py  crew_check.py  fast_path_smoke.py  latency_benchmark.py  ollama_tool_check.py  runner_check.py  validate_reports.py
src/greenloop_rag_crew/rag/: bm25_retriever.py  build_chunks.py  build_index.py  chroma_store.py  chunker.py  dense_search.py  document_registry.py  embedder.py  hybrid_retriever.py  hybrid_search.py  pdf_loader.py  retrieval_service.py  schemas.py  tokenizer.py
src/greenloop_rag_crew/tools/: __init__.py  document_search.py  tool_smoke.py
storage/: chunks.jsonl  index_manifest.json
storage/chroma/: chroma.sqlite3
tests/: test_agent_factory.py  test_bm25_retriever.py  test_chroma_store.py  test_chunker.py  test_config_loader.py  test_crew_factory.py  test_dense_search.py  test_deployment_artifacts.py  test_docker_packaging.py  test_document_search_tool.py  test_document_search_tool_integration.py  test_embedder.py  test_execution_timing.py  test_fast_pipeline.py  test_hybrid_retriever.py  test_hybrid_search.py  test_llm_config.py  test_llm_provider.py  test_manual_run.py  test_ollama_client.py  test_ollama_health.py  test_ollama_tool_calling.py  test_openrouter_client.py  test_pdf_loader.py  test_question_execution.py  test_questions_config.py  test_retrieval_service.py  test_runner.py  test_runtime_paths.py  test_streamlit_lifecycle.py  test_streamlit_progress.py  test_streamlit_secrets.py  test_tasks_config.py
