[project]
name = "greenloop-rag-crew"
version = "0.1.0"
description = "GreenLoop RAG Document Analyst Crew project setup."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,azure-ai-inference]",
    "streamlit",
    "pymupdf",
    "sentence-transformers",
    "torch",
    "transformers",
    "chromadb",
    "numpy",
    "rank-bm25",
    "json5",
    "python-dotenv",
    "pydantic",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greenloop_rag_crew"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.pytest.ini_options]
addopts = "-m 'not ollama'"
markers = [
    "ollama: real local Ollama qwen3:8b integration tests",
]
